k8s/apps/base/traefik-dashboard/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik-ingress
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`localhost`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      kind: Rule
      services:
        - name: api@internal
          namespace: traefik-ingress
          kind: TraefikService
